Asserts when textPath is used with no path https://bugs.webkit.org/show_bug.cgi?id=107324

Reviewed by Eric Seidel.

Source/WebCore:

We assert when there is no path associated with an SVG text path
element. Instead, this patch detects the condition and stops trying to
layout text for that textPath  element.

Test: svg/text/tpath-without-path.svg

* rendering/svg/SVGTextLayoutEngine.cpp:
(WebCore::SVGTextLayoutEngine::beginTextPathLayout):
(WebCore::SVGTextLayoutEngine::layoutTextOnLineOrPath):

LayoutTests:

Test will assert in debug without this patch.

* svg/text/tpath-without-path-expected.txt: Added.
* svg/text/tpath-without-path.svg: Added.


Canonical link: https://commits.webkit.org/125778@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@140429 268f45cc-cd09-0410-ab3c-d52691b4dbfc